# RAYS-CORE-CLI

./: .gitignore  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  affected_symbols_skeleton_fill.py  ai_client.py  anchoring.py  chat_context_pipeline.py  chunk_generator.py  code_executor.py  code_generator.py  config.yaml  config_locator.py  diagnose_ts.py  execution.py  file_analyzer.py  file_anchor.py  file_skeleton.py  git_status_summarizer.py  indexing.py  memory.py  new_codebase_generator.py  permission.py  planning.py  pyproject.toml  rays_generator.cpp  rays_generator.py  rays_main.py  rays_ui.py  read_boundaries.cpp  read_boundaries.py  read_rays.cpp  read_rays.py  read_relationships.cpp  read_relationships.py  (+8 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pypi-release.yml  studio-ci.yml  studio-release.yml  studio-version-bump.yml
Electron_app/: README.md
Electron_app/RAYS-Studio/: README.md  build-arch.sh  build-dmg.sh  build-linux.sh  build-windows.ps1  pyproject.toml
Electron_app/RAYS-Studio/bridge/src/rays_bridge/: ws_bridge.py
Electron_app/RAYS-Studio/desktop/: README.md  package-lock.json  package.json
Electron_app/RAYS-Studio/desktop/electron/: main.cjs  preload.cjs
Electron_app/RAYS-Studio/desktop/pyinstaller/: rays-bridge.spec
Electron_app/RAYS-Studio/desktop/scripts/: bundle-backend.ps1  bundle-backend.sh  fix-dist-html.js  run-bundle-backend.js  sync-core-from-cli.sh  verify-packaged-ui.js
Electron_app/RAYS-Studio/ui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
Electron_app/RAYS-Studio/ui/public/examples/: mcp-blender.json
Electron_app/RAYS-Studio/ui/src/: App.tsx  index.css
Electron_app/RAYS-Studio/ui/src/components/: AppShell.tsx
Electron_app/RAYS-Studio/ui/src/components/agent/: AgentChat.tsx  AgentExplorer.tsx  AgentLayout.tsx  AgentSidebar.tsx  McpManagerPanel.tsx  SkillsManagerPanel.tsx  ThinkingIndicator.tsx  thinkingDisplay.ts
Electron_app/RAYS-Studio/ui/src/components/agent/hermes/: ActivityRows.tsx  AgentTurnFeed.tsx  ApprovalPanel.tsx  ClarifyPromptPanel.tsx  DisclosureRow.tsx  ThinkingDisclosure.tsx  useElapsedSeconds.ts
Electron_app/RAYS-Studio/ui/src/components/ide/: AgentPanel.tsx  AppHeader.tsx  CodeEditor.tsx  DiffStream.tsx  FileExplorer.tsx  IDELayout.tsx  OnboardingScreen.tsx  PanelToggle.tsx  SettingsModal.tsx  StatusBar.tsx  TaskBar.tsx  TerminalPanel.tsx  WorkspaceLauncher.tsx  WorkspacePicker.tsx
Electron_app/RAYS-Studio/ui/src/data/: mcpExample.ts
Electron_app/RAYS-Studio/ui/src/hooks/: useAgentSessions.ts  useRaysSession.ts
Electron_app/RAYS-Studio/ui/src/pages/: Index.tsx
Electron_app/RAYS-Studio/ui/src/services/: agentActivity.ts  agentChatStorage.ts  agentSessionStorage.test.ts  agentSessionStorage.ts  appStorage.test.ts  appStorage.ts  onboardingStorage.test.ts  onboardingStorage.ts  platformHost.ts  raysSession.ts  workspaceStorage.test.ts  workspaceStorage.ts
Electron_app/RAYS-Studio/ui/src/test/: setup.ts
docs/: PUBLISHING.md  STUDIO_RELEASES.md  TROUBLESHOOTING.md
scripts/: test-studio.sh
src/rays_core/: config.yaml  rays_main.py  rays_ui.py  skills_orchestrator.py
tests/: test_studio_bridge.py
