[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rays-core"
version = "1.6.0"
description = "RAYS-CORE: AI-powered codebase analysis and editing assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Samreedh Bhuyan" }
]
dependencies = [
  "chromadb>=0.4,<1",
  "msgpack>=1.0,<2",
  "pyyaml>=6.0,<7",
  "requests>=2.28,<3",
  "rich>=13,<14",
  "tree-sitter>=0.21,<1",
  "mcp>=1.2,<2",
  "posthog>=2.4,<6"
]
keywords = ["ai", "codebase", "developer-tools", "cli", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
  "pytest>=7,<9",
  "build>=1",
  "twine>=6.1,<7",
  "pyinstaller>=6,<7",
]
studio = [
  "websockets>=12,<14",
  "onnxruntime>=1.16,<2",
  "tokenizers>=0.15,<1",
]

[project.scripts]
rays = "rays_core.rays_main:main"

[project.urls]
Homepage = "https://github.com/markknoffler/RAYS-CORE-CLI"
Repository = "https://github.com/markknoffler/RAYS-CORE-CLI"
Issues = "https://github.com/markknoffler/RAYS-CORE-CLI/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rays_core = ["config.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
